--- a/plugin.yml
+++ b/plugin.yml
@@ -2,5 +2,5 @@ name: PlayerCorpse
 version: 1.0.0
 author: Kingbobs
 api: [3.11.1]
-main: Kingbobs\Loader
+main: src/Kingbobs/Loader
 Github: https://github.com/Kingbobs
