--- a/plugin.yml
+++ b/plugin.yml
@@ -2,5 +2,5 @@ name: PlayerCorpse
 version: 1.0.0[S255]
 author: Kingbobs
 api: [3.11.1]
-main: Kingbobs/Loader
+main: Kingbobs/Loader.php
 Github: https://github.com/Kingbobs
